[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/fonts/montreal/Montreal48Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Interface/OptionsMenu/OptionsMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.984314, 0.572549, 0.235294, 1 )
border_color = Color( 0.505882, 0.54902, 0.972549, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.321569, 0.321569, 0.321569, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id=3]

[node name="OptionsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -253.0
margin_right = 360.0
margin_bottom = 253.0

[node name="Background" type="Panel" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Menu/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="Menu/Background/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 704.0
margin_bottom = 490.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 688.0
margin_bottom = 474.0
custom_constants/separation = 32
alignment = 1

[node name="ResumeButton" type="ToolButton" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 656.0
margin_bottom = 105.0
focus_neighbour_top = NodePath("../LevelSelectButton")
focus_neighbour_bottom = NodePath("../RetryButton")
custom_colors/font_color_focus = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Resume"

[node name="RetryButton" type="ToolButton" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 656.0
margin_bottom = 205.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
custom_colors/font_color_focus = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Retry"

[node name="SettingsButton" type="ToolButton" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 656.0
margin_bottom = 305.0
focus_neighbour_top = NodePath("../RetryButton")
focus_neighbour_bottom = NodePath("../LevelSelectButton")
custom_colors/font_color_focus = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Settings"

[node name="LevelSelectButton" type="ToolButton" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 337.0
margin_right = 656.0
margin_bottom = 405.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
custom_colors/font_color_focus = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Level Select"
